welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:30: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime43.MethodsDogHouse'
	override def run() {
                     ^